# amazon-q-developer-cli

./: .gitattributes  .gitignore  .rustfmt.toml  .typos.toml  AGENTS.md  AmazonQ.md  BEDROCK_USAGE_GUIDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  FILESYSTEM_WATCHER.md  PR_PLAN.md  README.md  SUBAGENT_DESIGN_DOC.md  TESTING.md  TOOL_USE_REFACTOR.md  WORKLOG.md  agent-client-protocol-rfc.md  agent-hooks-rfc.md  app.log.2025-10-24  book.toml  codebase-summary.md  delegate  deny.toml  eslint.config.js  feed.json  final_integration.rs  fzf-integration-plan.md  history-overflow-handler-spec.md  integration_checkpoint_1.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-contents.txt  question.md  rust-toolchain.toml  test.txt  test_cross_directory_scenario.sh  test_trajectory_commands.sh  (+1 more)
acp-client-test/: Cargo.toml
acp-client-test/src/: main.rs
crates/chat-cli-ui/: Cargo.toml
crates/chat-cli-ui/examples/: inline_input.rs
crates/chat-cli-ui/src/: conduit.rs  legacy_ui_util.rs  lib.rs  protocol.rs  subagent_indicator.rs
crates/chat-cli-ui/src/ui/: action.rs  config.rs  mod.rs  tui.rs
crates/chat-cli-v2/: .gitignore  Cargo.toml  README.md  build.rs  telemetry_definitions.json
crates/chat-cli-v2/eval/: .gitignore  README.md  eval_scenarios.json  tool_search_eval.rs
crates/chat-cli-v2/src/: Info.plist  compaction_prompt.md  constants.rs  default_agent_prompt.md  embedded_tui.rs  feature_flags.rs  lib.rs  logging.rs  main.rs  mcp_registry.rs  request.rs
crates/chat-cli-v2/src/agent/: README.md  ipc_server.rs  mod.rs
crates/chat-cli-v2/src/api_client/: delay_interceptor.rs  endpoints.rs  error.rs  error_utils.rs  mod.rs  model.rs  profile.rs  send_message_output.rs  token_type_interceptor.rs
crates/chat-cli-v2/src/auth/: builder_id.rs  external_idp.rs  mod.rs  pkce.rs  portal.rs  social.rs
crates/chat-cli-v2/src/cli/: feed.json  issue.rs  mcp.rs  mod.rs  settings.rs  user.rs
crates/chat-cli-v2/src/database/: mod.rs  settings.rs
crates/chat-cli-v2/src/os/: diagnostics.rs  mod.rs
crates/chat-cli-v2/src/util/: mod.rs  (+7 more)
crates/chat-cli-v2/tests/: acp.rs  cache_rate.rs
crates/chat-exp/: Cargo.toml  main.md  main.rs
crates/chat-script/: Cargo.toml
crates/chat-script/src/: lib.rs
crates/code-agent-sdk/: AmazonQ.md  Cargo.toml  README.md  regression_test.sh  test_file.ts  validate.sh
crates/code-agent-sdk/config/: languages.json
crates/code-agent-sdk/docs/: ADD_LANGUAGE.md  README.md
crates/code-agent-sdk/src/: error.rs  lib.rs
crates/code-agent-sdk/tests/: README.md  e2e_integration.rs
crates/kiro-bot/: Cargo.toml  README.md
crates/kiro-bot/src/: config.rs  lib.rs  main.rs
crates/mcp_client/: Cargo.toml
crates/mcp_client/src/: client.rs  facilitator_types.rs  messenger.rs
crates/mcp_client/test_mcp_server/: test_server_sse.rs
crates/mock-mcp-server/: Cargo.toml  README.md  test_config.jsonl
crates/mock-mcp-server/src/: lib.rs  main.rs
crates/mock-mcp-server/tests/: integration.rs
e2etests/: .gitignore  Cargo.toml  README.md  analysis_report_template.html  analyze_reports.py  html_template.html  run_context.clean.sh  run_mcp_clean.sh  run_mcp_only.sh  run_save_load_clean.sh  run_simple_categorized.sh  run_tests.py  run_tests.sh  run_tools_clean.sh  test_core_session_clean.sh
e2etests/src/: lib.rs
e2etests/tests/: agent_without_subcommand.rs  all_tests.rs  test_add_and_remove_mcp_command.rs  test_add_file_context.rs  test_add_globe_pattern_file_context.rs  test_add_multiple_file_context.rs  test_add_non_existing_file_context.rs  test_agent_commands.rs  test_agent_create_command.rs  test_agent_create_missing_args.rs  test_agent_help_command.rs  test_agent_invalid_command.rs  test_agent_list_command.rs  test_agent_schema_command.rs  test_agent_set_default_command.rs  test_agent_set_default_missing_args.rs  test_ai_prompt.rs  test_clear_command.rs  test_clear_context_command.rs  test_compact_command.rs  test_compact_help_command.rs  test_context_command.rs  test_context_help_command.rs  test_context_invalid_command.rs  test_context_remove_command_of_non_existent_file.rs  test_context_show_command.rs  test_context_without_subcommand.rs  test_editor_help_command.rs  test_help_command.rs  test_hooks_command.rs  test_hooks_help_command.rs  test_issue_command.rs  test_issue_force_command.rs  test_issue_help_command.rs  test_load_command.rs  test_load_command_argument_validation.rs  test_load_help_command.rs  test_mcp_command.rs  test_mcp_help_command.rs  test_mcp_loading_command.rs  (+37 more)
e2etests/tests/agent/: mod.rs  test_agent_commands.rs
e2etests/tests/ai_prompts/: mod.rs  test_ai_prompt.rs  test_prompts_commands.rs
e2etests/tests/context/: mod.rs  test_context_command.rs
e2etests/tests/core_session/: mod.rs  test_changelog_command.rs  test_clear_command.rs  test_command_introspect.rs  test_command_tangent.rs  test_help_command.rs  test_quit_command.rs  test_tools_command.rs
e2etests/tests/experiment/: mod.rs  test_experiment_command.rs
e2etests/tests/integration/: mod.rs  test_editor_help_command.rs  test_hooks_command.rs  test_issue_command.rs  test_subscribe_command.rs
e2etests/tests/mcp/: mod.rs  test_mcp_command.rs  test_mcp_command_regression.rs  test_q_mcp_command.rs  test_q_mcp_subcommand.rs
e2etests/tests/model/: mod.rs  test_model_dynamic_command.rs
e2etests/tests/q_subcommand/: mod.rs  test_q_chat_command.rs  test_q_chat_subcommand.rs  test_q_debug_subcommand.rs  test_q_doctor_command.rs  test_q_doctor_subcommand.rs  test_q_inline_subcommand.rs  test_q_quit_subcommand.rs  test_q_restart_subcommand.rs  test_q_setting_subcommand.rs  test_q_settings_deletecommand.rs  test_q_settings_format_command.rs  test_q_translate_command.rs  test_q_translate_subcommand.rs  test_q_update_subcommand.rs  test_q_user_subcommand.rs  test_q_whoami_subcommand.rs
e2etests/tests/save_load/: mod.rs  test_save_load_command.rs
e2etests/tests/session_mgmt/: mod.rs  test_compact_command.rs  test_usage_command.rs
e2etests/tests/todos/: mod.rs  test_todos_command.rs
e2etests/tests/tools/: mod.rs  test_tools_command.rs
(+2149 files in other folders)
