[package]
name = "q-cli-e2e-tests"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
expectrl = "0.7"

[features]
default = []
core_session = []
agent = []
context = []
save_load = []
model = []
session_mgmt = []
integration = []
mcp = []
ai_prompts = []
issue_reporting = []
tools=[]
compact=[]
hooks=[]
usage=[]
editor=[]
subscribe=[]

[[test]]
name = "test_help_command"
path = "tests/test_help_command.rs"

[[test]]
name = "test_tools_command"
path = "tests/test_tools_command.rs"

[[test]]
name = "test_ai_prompt"
path = "tests/test_ai_prompt.rs"
