[package]
name = "chat-exp2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat-exp2"
path = "main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# AWS SDK dependencies
aws-sdk-bedrockruntime = "1.106.0"
aws-config = "1.0"
aws-credential-types = "1.0"
serde_json = "1.0"

# Async trait support
async-trait = "0.1"
