[package]
name = "chat-script"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eyre.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
