[package]
name = "code-agent-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
strsim.workspace = true
serde.workspace = true
rayon.workspace = true
lsp-types.workspace = true
url.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
clap.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-io"] }
notify.workspace = true
ignore.workspace = true
globset.workspace = true
which.workspace = true
dashmap.workspace = true
dirs.workspace = true
ast-grep-language.workspace = true
ast-grep-core.workspace = true
sha2.workspace = true
moka.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "code-agent-cli"
path = "src/cli/cli.rs"

[[bin]]
name = "code-agent-mcp"
path = "src/bin/mcp_server.rs"
