[package]
name = "kiro-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Bot runtime for Kiro CLI — manages ACP-backed agent instances with pluggable frontends (Slack, cron, CLI)"

[[bin]]
name = "kiro-bot"
path = "src/main.rs"

[dependencies]
# Workspace deps
agent-client-protocol = { version = "0.7.0", features = ["unstable"] }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
http.workspace = true
regex.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
tokio-util = { workspace = true, features = ["compat"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true

# New deps (not yet in workspace)
cedar-policy = "4.0"
cron = "0.16"
jsonschema = { version = "0.44", default-features = false }
rpassword = "7"
slack-morphism = { version = "2", features = ["hyper"] }
