[package]
name = "mcp_client"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[[bin]]
name = "test_mcp_server_stdio"
path = "test_mcp_server/test_server_stdio.rs"
test = true
doc = false

[[example]]
name = "test_mcp_server_sse"
path = "test_mcp_server/test_server_sse.rs"
test = true
doc = false

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
nix.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
futures-util.workspace = true

[dev-dependencies]
mcp-ectors.workspace = true
actix.workspace = true
actix-rt.workspace = true
actix-web.workspace = true
tokio.workspace = true
